# actinia-satellite-plugin

./: .coveragerc  .flake8  CHANGELOG.rst  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tests_with_kvdb.sh  tests_with_redis.sh
.github/workflows/: flake8.yml  python-publish.yml  tests.yml
docker/: Dockerfile  README.md  create_release_with_asset.sh
docker/actinia-plugin-tests/: Dockerfile  actinia-test.cfg
docs/: Makefile  conf.py  index.rst
scripts/: main.py
src/actinia_satellite_plugin/: __init__.py  aws_sentinel2a_query.py  endpoints.py  ephemeral_landsat_ndvi_processor.py  ephemeral_sentinel2_ndvi_processor.py  main.py  persistent_landsat_timeseries_creator.py  persistent_sentinel2_timeseries_creator.py  satellite_query.py  skeleton.py
tests/: conftest.py  test_aws_sentinel_service.py  test_landsat.py  test_landsat_timeseries_creation.py  test_resource_base.py  test_satellite_query.py  test_sentinel2_ndvi.py  test_sentinel2_timeseries_creation.py  test_skeleton.py
